# embedded-rust-microbit-discovery

./: .gitignore  Cargo.toml  Embed.toml  README.md
src/: main.rs
