[package]
name = "embedded-rust-microbit-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.3", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
cortex-m-semihosting = "0.5.0"
microbit-v2 = "0.13.0"
panic-halt = "0.2.0"

[dev-dependencies]
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
